[project]
name = "packaging-proposal"
version = "1.0.0"
description = ""
authors = [{ name = "pederhan", email = "pederhan@uio.no" }]
dependencies = ["mkdocs>=1.3.1", "mkdocs-material>=8.5.0"]
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
keywords = ["keyword1", "keyword2"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://example.com"
repository = "https://github.com/user/example"
documentation = "https://example.com/docs"

[project.optional-dependencies]
docs = ["mkdocstrings>=0.19.0"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["pytest>=7.1.3"]
